<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDF7">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <ImageView
            android:id="@+id/logoForgot"
            android:layout_width="328dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/larkinlogo"
            android:src="@drawable/larkin_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password1"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#766161"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email_to_reset_your_password"
            android:textSize="15sp"
            android:textColor="#444444"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#0D47A1"
            app:hintTextColor="#0D47A1"
            android:textColorHint="#CDC7BE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#0D47A1"
                android:textColorHint="#0D47A1"
                android:backgroundTint="#0D47A1" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:layout_marginTop="160dp"
            android:backgroundTint="#C62828"/>
        <TextView
            android:id="@+id/txtBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/back_to_login"
            android:textColor="#766161"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>