<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE4DB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="328dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/larkinlogo"
            android:src="@drawable/larkin_logo" />

        <!-- Welcome -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#766161"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/glad_to_see_you_again_please_login_to_continue"
            android:textColor="#766161"
            android:textSize="12sp" />


        <!-- Email Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#0D47A1"
            app:hintTextColor="#0D47A1"
            android:textColorHint="#CDC7BE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="#0D47A1"
            android:textColorHint="#0D47A1"
            android:backgroundTint="#0D47A1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="#0D47A1"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#0D47A1"
            app:hintTextColor="#0D47A1"
            android:textColorHint="#CDC7BE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#1565C0"
            android:textColorHint="#1565C0"
            android:backgroundTint="#1565C0" />
    </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/checkRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="#3F51B5"
                android:textStyle ="bold"
                android:buttonTint="#3F51B5"/>

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:text="@string/forgot_password"
                android:textColor="#766161"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>


        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#87A7B3"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />


        <!-- Signup -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_here"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtSignup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/create_account"
                android:textColor="#766161"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>