<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EFEFEF">

    <!-- HEADER -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#766161">

        <!-- Back button -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:scaleType="fitCenter"
            android:src="@drawable/back"
            app:tint="#FFFFFF"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Page tittle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/payment_confirmation"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <!-- CONTENT -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- SUCCESS ICON -->
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/successful"
                android:contentDescription="@string/payment_successful_icon"/>

            <!-- MAIN SUCCESS TEXT -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_successful"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:gravity="center"
                android:layout_marginTop="12dp"/>

            <!-- Sub message -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/your_booking_is_confirmed"
                android:textColor="#777777"
                tools:ignore="TextContrastCheck" />

            <!-- CARD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@drawable/card_white"
                android:padding="18dp"
                android:elevation="4dp">

                <!-- ORDER -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_number"
                    android:textColor="#888888"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TLSTR2603-10778"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="12dp"
                    tools:ignore="HardcodedText" />

                <!-- Method -->
                <TextView
                    android:id="@+id/txtMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:layout_marginBottom="10dp"/>

                <!-- Bank -->
                <TextView
                    android:id="@+id/txtBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <!-- Amount -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="#888888"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#2E7D32"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <!-- DONE BUTTON -->
            <Button
                android:id="@+id/btnDone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/done"
                android:textColor="#FFFFFF"
                android:backgroundTint="#766161"
                android:layout_marginTop="25dp"
                tools:ignore="VisualLintButtonSize" />

            <!-- FOOTER -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:gravity="center"
                android:text="@string/powered_by_kiple"
                android:textColor="#2E77D0"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="246dp"
                android:layout_height="119dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/pci_dss"
                android:scaleType="fitCenter"
                android:src="@drawable/pci_dss" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>